5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_1580.log
== TEST (2019-05-28 23:49:48) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

#Quantos alunos faltaram à avaliação?
#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:50:40) 
-- CODE:
from numpy import *

notas = array(float(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:51:15) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:52:16) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print len(notas)

#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
File "XXXX", line 12
    print len(notas)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:53:18) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print (len(notas))

#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:53:50) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print (len(notas=-1))

#Quantos alunos foram aprovados?
#Entre os alunos presentes, quantos alunos foram reprovados?
#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#Qual o nome do aluno que tirou a maior nota da classe?
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:56:07) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print (len(notas=-1))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
print (max(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:56:29) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
#print (len(notas=-1))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
print (max(notas))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:58:25) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
#print (len(notas=-1))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:59:05) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
#print (len(notas=-1))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:02:29) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:02:52) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:02:57) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:03:03) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- EXECUTION TIME:
0.32308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 12, in <module>
    print(sum(votos[:-1]))
NameError: name 'votos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:04:19) 
-- CODE:
from numpy import *

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:06:31) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(eval(input("Lista de Alunos: ")))

#media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:08:01) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(votos[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:09:20) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(sum(notas[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:11:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(len(notas[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:11:59) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(len(notas[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
#print (alunos[max(notas)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:15:47) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6
i = 0

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(len(notas[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
while (notas[i] != max(notas)):
	i = i + 1
	print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:16:50) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas dos Alunos: ")))
alunos = array(str(input("Lista de Alunos: ")))

#media = 6
i = 0

print (notas)
print(alunos)

#Quantos alunos faltaram à avaliação?
print(len(notas[:-1]))

#Quantos alunos foram aprovados?


#Entre os alunos presentes, quantos alunos foram reprovados?


#Entre os alunos presentes, qual foi a média de notas, com até duas casas decimais de precisão?
#print (round(mean(notas),2))

#Qual o nome do aluno que tirou a maior nota da classe?
while (notas[i] != max(notas)):
	i = i + 1
print(alunos[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:38:07) 
-- CODE:
from numpy import* 
notas = array(eval(input("notas:")))
alunos = array(eval(input("alunos:")))


faltou = 0
aprovados = 0
reprovados = 0
soma_das_anotas = 0
i = 0

while(i < size(notas)):
	if(notas[i] == -1):
		faltou = faltou + 1
		
	if(notas[i] >= 6 and notas[i] <= 10 ):
		aprovados = aprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] >= 0 and notas[i] < 6):
		reprovados = reprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
		
	i = i + 1
	
alunos_Presentes = reprovados + aprovados
media = soma_das_anotas/alunos_Presentes

print(faltou)
print(aprovados)
print(reprovados)
print(round((media),2))
print(maior_nota)
-- EXECUTION TIME:
0.0230861
-- ERROR:
Error: No such container: sh

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:38:47) 
-- CODE:
from numpy import* 

notas = array(eval(input("notas:")))
alunos = array(eval(input("alunos:")))


faltou = 0
aprovados = 0
reprovados = 0
soma_das_anotas = 0
i = 0

while(i < size(notas)):
	if(notas[i] == -1):
		faltou = faltou + 1
		
	if(notas[i] >= 6 and notas[i] <= 10 ):
		aprovados = aprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] >= 0 and notas[i] < 6):
		reprovados = reprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
		
	i = i + 1
	
alunos_Presentes = reprovados + aprovados
media = soma_das_anotas/alunos_Presentes

print(faltou)
print(aprovados)
print(reprovados)
print(round((media),2))
print(maior_nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:39:41) 
-- CODE:
from numpy import* 

notas = array(eval(input("notas:")))
alunos = array(eval(input("alunos:")))


faltou = 0
aprovados = 0
reprovados = 0
soma_das_anotas = 0
i = 0

while(i < size(notas)):
	if(notas[i] == -1):
		faltou = faltou + 1
		
	if(notas[i] >= 6 and notas[i] <= 10 ):
		aprovados = aprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] >= 0 and notas[i] < 6):
		reprovados = reprovados + 1
		soma_das_anotas = soma_das_anotas + notas[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
		
	i = i + 1
	
alunos_Presentes = reprovados + aprovados
media = soma_das_anotas/alunos_Presentes

print(faltou)
print(aprovados)
print(reprovados)
print(round((media),2))
print(maior_nota)
-- EXECUTION TIME:
0.618831
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
